# NLP_Assistant

./: .env.example  .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: data.yaml  eval.yaml  graph.yaml  models.yaml  rankrag.yaml  retrieval.yaml  sft.yaml
data/: ARTIFACTS.md  ARTIFACTS_DOWNLOAD.md  DATASET_CARD.md  README.md  parsed_valid.json
demo/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/: DATA_ACQUISITION.md  EVAL_WORKFLOW.md  OFFLINE_MODEL_TRANSFER.md  VERIFIER_SERVER.md
results/: README.md  main_table.json  main_table.md
scripts/: README.md  bootstrap_test.py  build_eval_prompts.py  build_graph_communities.py  build_graph_pilot.py  build_index.py  build_rankrag_data.py  build_report.py  build_sft_data.py  build_sft_dpo_data.py  check_models.py  check_portable_data.py  compare_eval.py  download_models.sh  eval_verifier_smoke.py  export_from_corpus.py  fix_unarxive_manifest_paths.py  install_artifacts.sh  normalize.py  preflight.py  prepare_factscore_audit.py  prepare_human_eval.py  rankrag_train.py  run_eval.py  run_eval_grid.py  run_ragas_sample.py  s3_pull.py  seg2_bookkeeping.py  seg3_smoke.py  serve_demo.py  serve_verifier.py  setup_python_dev_headers.sh  setup_venv.sh  sft_dpo_train.py  sft_smoke_eval.py  sft_train.py
src/: sitecustomize.py
tests/: README.md  conftest.py  test_artifact_backup.py  test_arxiv_id.py  test_bootstrap.py  test_candidate_merge.py  test_chunker.py  test_citations.py  test_config.py  (+40 more)
(+156 files in other folders)
