[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded"
version = "0.1.0"
description = "Grounded: arXiv LaTeX data acquisition"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7",
    "torch>=2.3",
    "transformers>=4.44",
    "safetensors>=0.4",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
train = [
    "peft>=0.12",
    "trl>=0.10",
    "datasets>=2.20",
    "bitsandbytes>=0.43",
    "accelerate>=0.34",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
